[package]
name = "pdf-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0"
prost = "0.11.9"
tempfile = "3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.9.2"

